--- a/data/en/sections/skills.yaml
+++ b/data/en/sections/skills.yaml
@@ -11,39 +11,51 @@ section:
 # Your Skills.
 # Give a summary of you each skill in the summary section.
 skills:
-- name: Kubernetes
-  logo: /images/sections/skills/kubernetes.png
-  summary: "Capable of deploying, managing application on Kubernetes. Experienced in writing Kubernetes controllers for CRDs."
-  url: "https://kubernetes.io/"
+- name: Javascript
+  logo: /images/sections/skills/javascript.jpeg
+  summary: "Highly skilled in Javascript. Main language for professional frontend and backend development. Capable of writing scalable, testable, and maintainable programs either in raw Javascript or using some of the popular frameworks like Angular.js, React.js, Backbone.js, Vue.js e.t.c."
+  url: "https://developer.mozilla.org/en-US/docs/Web/JavaScript"
 
-- name: Go Development
-  logo: /images/sections/skills/go.png
-  summary: "Using as the main language for professional development. Capable of writing scalable, testable, and maintainable program."
-  url: "https://golang.org/"
+- name: Php
+  logo: /images/sections/skills/php.png
+  summary: "Using as the main language for professional backend development. Capable of writing scalable, testable, and maintainable programs."
+  url: "https://www.php.net/"
+
+- name: Laravel
+  logo: /images/sections/skills/laravel.png
+  summary: "With over 6years of Laravel experience, I have used this eloquent php framework to build API's and single page applications for various companies."
+  url: "https://laravel.com/"
+
+- name: GraphQL
+  logo: /images/sections/skills/graphql.png
+  summary: "With several years of experience using GraphQL. Used to create efficient API's which can be consumed by multiple types of clients without having to create (mostly) duplicate endpoints for each client."
+  url: "https://graphql.org/"
 
 - name: Cloud Computing
   logo: /images/sections/skills/cloud.png
-  summary: "Worked with most of the major clouds such as GCP, AWS, Azure etc."
+  summary: "Worked with most of the major clouds such as AWS, Azure, Digital Ocean, Vultr etc."
 
 - name: Docker
   logo: /images/sections/skills/docker.svg
-  summary: "Write most of the programs as dockerized container. Experienced with multi-stage, multi-arch build process."
+  summary: "Have written many programs as dockerized containers. Used in development and in production environments along with Jenkins. Plan to use for most apps in the future whenever possible. Experienced with multi-stage builds for efficiency."
   url: "https://www.docker.com/"
 
-- name: Prometheus
-  logo: /images/sections/skills/prometheus.png
-  summary: "Capable of setup, configure Prometheus metrics. Experienced with PromQL, AlertManager. Also, experienced with writing metric exporters."
-  url: "https://prometheus.io/"
+# - name: Prometheus
+#   logo: /images/sections/skills/prometheus.png
+#   summary: "Capable of setup, configure Prometheus metrics. Experienced with PromQL, AlertManager. Also, experienced with writing metric exporters."
+#   url: "https://prometheus.io/"
 
 - name: Linux
   logo: /images/sections/skills/linux.png
-  summary: "Using as the main operating system. Capable of writing bash/shell scripts."
+  summary: "Using as the main operating system for development. Capable of writing bash/shell scripts, as well as setup for development, debug and deploy applications."
 
 - name: Git
   logo: /images/sections/skills/git.png
-  summary: "Experienced with git-based development. Mostly, use Github. Also, have experience in working with GitLab."
+  summary: "Experienced with git-based development. Mostly, use Github. Also, have experience in working with Bitbucket, mecurial and subversion."
   url: "https://git-scm.com/"
 
-- name: C++
-  logo: /images/sections/skills/c++.png
-  summary: "Know basic C/C++ programming. Used for contest programming and problem solving."
+- name: Kubernetes
+  logo: /images/sections/skills/kubernetes.png
+  summary: "Have worked with it professionally briefly. Current on my todo list of skills to dive deeper into soon."
+  # summary: "Capable of deploying, managing application on Kubernetes. Experienced in writing Kubernetes controllers for CRDs."
+  url: "https://kubernetes.io/"
