Add stack overflow link

--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -34,7 +34,7 @@ socialLinks:
 
 - name: Stackoverflow
   icon: "fab fa-stack-overflow"
-  url: "#"
+  url: "https://stackoverflow.com/users/776878/lamin-sanneh"
 
 - name: LinkedIn
   icon: "fab fa-linkedin"
