add first blog post

--- a/data/en/sections/education.yaml
+++ b/data/en/sections/education.yaml
@@ -16,7 +16,7 @@ degrees:
   institution:
     name: University of Manchester
     url: "https://www.manchester.ac.uk/"
-- name: B.Sc. in Computer Science & Engineering
+- name: A Levels in Computer Science & Engineering
   icon: fa-graduation-cap
   timeframe: 2009-2010
   institution:
