--- a/hugo.yaml
+++ b/hugo.yaml
@@ -277,7 +277,7 @@ params:
       customMenus: true
     # Show/hide "Contact Me" section in the footer. Default is "true".
     contactMe:
-      enable: false
+      enable: true
     # Show/hide credentials section in the footer. Default is "true".
     credentials:
       enable: true
