--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -6,11 +6,11 @@ greeting: "Hi, I am"
 image: "images/author/my-headshot-optimized.jpg"
 # give your some contact information. they will be used in the footer
 contactInfo:
-  email: "johndoe@example.com"
-  phone: "+0123456789"
-  github: johndoe
-  linkedin: johndoe
-  researchgate: john-doe
+  email: "lamin.evra@gmail.com"
+  # phone: "+0123456789"
+  # github: johndoe
+  # linkedin: johndoe
+  # researchgate: john-doe
 
 # some summary about what you do
 summary:
