Update author description

--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -15,7 +15,7 @@ contactInfo:
 # some summary about what you do
 summary:
   - I am a Full Stack Software Developer
-  - I love React, Laravel, Devops, servers and git
-  - I love to teach on youtube and have several projects
-  - I work on open-source
+  - I love React, Go, Node.js, Java, Laravel, Docker and git
+  - I love to teach on youtube
+  - I work on open-source on gitub
   - Scroll down to see more
